# mini-raytracer-c

./: CmakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.c
src/core/: raytracer.c  raytracer.h  scene.c  scene.h
src/math/: vector.c  vector.h
src/output/: ppm.c  ppm.h
